# serverless-algo-scheduler

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  serverless.yml
fn-api/: Cargo.toml
fn-api/src/: main.rs
fn-authorizer/: Cargo.toml
fn-authorizer/src/: main.rs
fn-job/: Cargo.toml
fn-job/src/: main.rs
hello/src/: main.rs
lib-models/: Cargo.toml
lib-models/src/: lib.rs
