[package]
name = "job"
version = "0.1.0"
authors = ["Rowell Belen <developer@bytekast.com>"]
edition = "2018"

[dependencies]
models = { path = "../lib-models" }
aws_lambda_events = "^0.2.4"
lambda_http = "0.1"
lambda_runtime = "0.2"
serde_json = "1.0"
serde = { version = "1.0.91", features = ["derive"]}
rusoto_core = {version = "0.39.0", default_features = false, features=["rustls"]}
rusoto_sqs = {version = "0.39.0", default_features = false, features=["rustls"]}
reqwest = {version = "0.9.17", default_features = false, features=["rustls-tls"]}