[package]
name = "models"
version = "0.1.0"
authors = ["Rowell Belen <developer@bytekast.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.91", features = ["derive"]}
rusoto_core = {version = "0.39.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.39.0", default_features = false, features=["rustls"]}
uuid = {version = "0.7", features = ["v4", "serde"]}
maplit = "1.0.1"
chrono = "0.4.6"